# ComfyUI-FLUX2-JSON

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  test_color_palette.py  test_custom_options.py  test_nodes.py  test_style_selector.py
Agents/: AGENT-SYSTEM-PROMPTS-GUIDE.md  JSON-Direct-Expert.md  JSON-Plan-Expert.md
course/: 00-course-overview.md  01-introduction-to-structured-prompting.md  02-json-schema-anatomy.md
docs/: INSTALLATION-GUIDE.md  WORKFLOW-GUIDE.md  WORKFLOW-PATTERNS.md
examples/: FLUX2-JSON-i2i-Akira-Plan-example-v15.json  FLUX2-JSON-i2i-Akira-char-bike-custom-example-v15.json  FLUX2-JSON-i2i-Akira-char-bike-paletter-v20.json  FLUX2-JSON-i2i-Variationator-v20.json  FLUX2-JSON-t2i-Akira-Plan-example-v12.json  FLUX2-JSON-t2i-Godzilla-example-v12.json  FLUX2-JSON-t2i-example-v12.json  README.md  t2i-Akira-Direct.json  t2i-Akira-example.md  t2i-Godzilla-example.md
nodes/: base.py  camera_rig.py  color_palette.py  prompt_assembler.py  scene_builder.py  style_selector.py  subject_array.py  subject_creator.py
plan/: COMPLETE-FILE-CHECKLIST.md  FLUX2-Node-Suite-Planning.md  PHASE-1-COMPLETE.md  ROADMAP.md
