[project]
name = "flux2-json"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# FLUX.2 JSON Prompt Builder - Requirements", "# This package has minimal dependencies and uses only Python standard library", "# No external dependencies required for Phase 1", "# All functionality uses Python built-ins: json, typing", "# Future phases may add:", "# - colorsys (for color harmony generation) - built-in", "# - PIL/Pillow (for image analysis) - ComfyUI dependency", "# - numpy (for calculations) - ComfyUI dependency"]

[project.urls]
Repository = "https://github.com/MushroomFleet/ComfyUI-FLUX2-JSON"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/MushroomFleet/ComfyUI-FLUX2-JSON/wiki"
"Bug Tracker" = "https://github.com/MushroomFleet/ComfyUI-FLUX2-JSON/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FLUX2-JSON"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

